feat: enhance export functionality with dynamic file naming and improved UI elements